--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 
                 /* applies to all areas */
                 --font-family: sans-serif;
-                --font-size: 14px;
+                --font-size: 20px;
                 --line-height: 1.3em;
                 --font-color: black;
                 --link-color: #363636;
@@ -29,13 +29,13 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                 --content-bg-color: #d2d2d2;
 
                 /* header */
-                --header-height: 150px;
+                --header-height: 500px;
                 --header-background: url('hungarian_conquest.jpg');
                 --header-margin-bottom: 0px;
 
                 /* sidebar */
                 --sidebar-margin: 10px;
-                --sidebar-width: 150px;
+                --sidebar-width: 500px;
                 --sidebar-padding: 15px;
                 --sidebar-bg-color: #d2d2d2;
 
@@ -50,7 +50,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                 --nav-bg-color: #d2d2d2;
 
                 /* container */
-                --container-width: 800px;
+                --container-width: 1000px;
                 --container-bg-color: #e8e8e8;
 
                 /* controls the gap between the content and the footer */
@@ -246,7 +246,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                         <h1 style=text-align:center>Rovás Irás</h1>
                             <h2 style=text-align:right>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">                            
+                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">                            
 𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎 <br />
 𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇 <br />
 𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇 <br />
@@ -258,13 +258,14 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲀𐲯:‏𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓:‏𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓 <br />
 𐲋𐲤:‏𐲙𐲉:‏𐲮𐲑𐲎:‏𐲘𐲐𐲙𐲓𐲉𐲦:‏𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉 <br />
 𐲇𐲉:‏𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤:‏𐲘𐲉𐲍:‏𐲀:‏𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖 <br />
-𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋 <br />
+𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:
+				    ‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋 <br />
 𐲁𐲘𐲉𐲙
 </p>
 
                             <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">
 𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖 <br />
 𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢 <br />
 𐲂𐲞𐲖𐲆𐲟𐲇:‏𐲀𐲯:‏𐲤:‏𐲘𐲀𐲒𐲇𐲀𐲙:‏𐲤𐲑𐲢𐲛𐲇:‏𐲐𐲤 <br />
@@ -278,118 +279,118 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲉𐲯:‏𐲀:‏𐲌𐲞𐲖𐲇:‏𐲘𐲉𐲗𐲉𐲙:‏𐲀𐲙𐲚𐲐𐲥𐲛𐲢 <br />
 𐲀𐲠𐲁𐲐𐲇:‏𐲮𐲋𐲢𐲉:‏𐲌𐲛𐲗𐲦 <br />
 𐲉𐲯:‏𐲘𐲉𐲗𐲏𐲉𐲯:‏𐲘𐲐𐲙𐲇𐲉𐲙:‏𐲥𐲉𐲙𐲦:‏𐲙𐲉𐲮𐲉𐲦 <br />
-𐲉𐲎:‏𐲉𐲯𐲢𐲉𐲇𐲋𐲮:‏𐲆𐲀𐲦𐲛𐲖𐲦                   <br />
-                   <br />
-𐲐𐲦𐲦:‏𐲓𐲬𐲯𐲇𐲦𐲉𐲙𐲉𐲓:‏𐲏𐲛𐲙𐲋𐲢𐲦:‏𐲀:‏𐲏𐲟𐲤                   <br />
-𐲁𐲢𐲠𐲁𐲇𐲙𐲀𐲓:‏𐲏𐲀𐲇𐲀𐲐                   <br />
-𐲐𐲦𐲦:‏𐲦𐲞𐲢𐲦𐲉𐲓:‏𐲞𐲤𐲥𐲉:‏𐲢𐲀𐲂𐲐𐲍𐲁𐲦                   <br />
-𐲏𐲪𐲚𐲀𐲇𐲙𐲀𐲓:‏𐲓𐲀𐲢𐲒𐲀𐲐                   <br />
-                   <br />
-𐲥𐲀𐲂𐲀𐲇𐲤𐲁𐲍:‏𐲐𐲦𐲦𐲉𐲙:‏𐲏𐲛𐲢𐲇𐲛𐲯𐲁𐲓                   <br />
-𐲮𐲋𐲢𐲉𐲤:‏𐲯𐲁𐲥𐲖𐲜𐲐𐲇𐲀𐲦                   <br />
-𐲤:‏𐲉𐲖𐲏𐲪𐲖𐲖𐲦𐲀𐲙𐲀𐲓:‏𐲖𐲉𐲍𐲒𐲛𐲂𐲂𐲒𐲀𐲐𐲙𐲓                   <br />
-𐲀:‏𐲏𐲛𐲤𐲥𐲫:‏𐲏𐲀𐲢𐲄:‏𐲀𐲖𐲀𐲦𐲦                   <br />
-                   <br />
-𐲋𐲤:‏𐲀𐲙𐲚𐲐:‏𐲂𐲀𐲖𐲥𐲉𐲢𐲉𐲙𐲆𐲉:‏𐲓𐲞𐲯𐲦                   <br />
-𐲛𐲗:‏𐲤𐲛𐲓:‏𐲮𐲐𐲥𐲁𐲗:‏𐲪𐲦𐲁𐲙                   <br />
-𐲘𐲉𐲍𐲌𐲛𐲎𐲮𐲀:‏𐲂𐲁𐲢:‏𐲇𐲉:‏𐲦𐲞𐲢𐲮𐲉:‏𐲙𐲉𐲘                   <br />
-𐲋𐲖:‏𐲙𐲉𐲘𐲯𐲉𐲦:‏𐲉:‏𐲏𐲀𐲯𐲁𐲙                   <br />
-                   <br />
-𐲤:‏𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲯𐲁𐲒𐲀:‏𐲙𐲀𐲎:‏𐲮𐲐𐲖𐲁𐲍                   <br />
-𐲏𐲛𐲯𐲯𐲁𐲇:‏𐲂𐲁𐲦𐲢𐲀𐲙:‏𐲓𐲐𐲁𐲖𐲦:‏                   <br />
-𐲉𐲎:‏𐲉𐲯𐲢𐲉𐲇𐲋𐲮𐲐:‏𐲥𐲉𐲙𐲮𐲉𐲇𐲋𐲤                   <br />
-𐲓𐲋𐲢:‏𐲋𐲖𐲦𐲉𐲦:‏𐲮𐲀𐲎:‏𐲏𐲀𐲖𐲁𐲖𐲦                   <br />
-                   <br />
-𐲀𐲯:‏𐲙𐲉𐲘:‏𐲖𐲉𐲏𐲉𐲦:‏𐲏𐲛𐲎:‏𐲀𐲙𐲚𐲐:‏𐲥𐲑𐲮                   <br />
-𐲏𐲐𐲁𐲂𐲀:‏𐲛𐲙𐲦𐲀:‏𐲮𐲋𐲢𐲦                   <br />
-𐲤:‏𐲓𐲉𐲤𐲉𐲢𐲮𐲂𐲉𐲙:‏𐲀𐲙𐲚𐲐:‏𐲏𐲭:‏𐲓𐲉𐲂𐲉𐲖                   <br />
-𐲥𐲀𐲓𐲀𐲇𐲦:‏𐲘𐲉𐲍:‏𐲀:‏𐲏𐲛𐲙𐲋𐲢𐲦                   <br />
-                           <br />       
-𐲀𐲯:‏𐲙𐲉𐲘:‏𐲖𐲉𐲏𐲉𐲦:‏𐲏𐲛𐲎:‏𐲋𐲥:‏𐲉𐲢𐲟                   <br />
-𐲋𐲤:‏𐲛𐲗:‏𐲥𐲉𐲙𐲦:‏𐲀𐲓𐲀𐲢𐲀𐲦                   <br />
-𐲏𐲐𐲁𐲂𐲀:‏𐲤𐲛𐲢𐲮𐲀𐲇𐲛𐲯𐲯𐲀𐲙𐲀𐲓                   <br />
-𐲉𐲎:‏𐲁𐲦𐲛𐲓𐲤𐲫𐲗:‏𐲀𐲖𐲀𐲦𐲦                   <br />
-                   <br />
-𐲘𐲋𐲍:‏𐲒𐲟𐲙𐲐:‏𐲓𐲉𐲖𐲖:‏𐲘𐲋𐲍:‏𐲒𐲟𐲙𐲐:‏𐲌𐲛𐲍                   <br />
-𐲉𐲎:‏𐲒𐲛𐲂𐲂:‏𐲓𐲛𐲢:‏𐲘𐲉𐲗:‏𐲪𐲦𐲁𐲙                   <br />
-𐲂𐲪𐲯𐲍𐲜:‏𐲐𐲘𐲁𐲇𐲤𐲁𐲍:‏𐲉𐲠𐲉𐲇𐲉𐲯                   <br />
-𐲥𐲁𐲯𐲉𐲯𐲢𐲉𐲓:‏𐲀𐲒𐲀𐲓𐲁𐲙                   <br />
-                   <br />
-𐲮𐲀𐲎:‏𐲒𐲟𐲙𐲐:‏𐲌𐲛𐲍:‏𐲏𐲀:‏𐲒𐲟𐲙𐲐:‏𐲓𐲉𐲖𐲖                   <br />
-𐲀:‏𐲙𐲀𐲎𐲥𐲉𐲢𐲭:‏𐲏𐲀𐲖𐲁𐲖                   <br />
-𐲏𐲛𐲖:‏𐲀:‏𐲦𐲉𐲘𐲉𐲦𐲓𐲉𐲯𐲋𐲤:‏𐲌𐲞𐲖𐲞𐲦𐲦                   <br />
-𐲉𐲎:‏𐲛𐲢𐲥𐲁𐲍:‏𐲮𐲋𐲢𐲂𐲉𐲙:‏𐲁𐲖𐲖                   <br />
-                   <br />
-𐲤:‏𐲀:‏𐲤𐲑𐲢𐲦:‏𐲏𐲛𐲖:‏𐲙𐲉𐲘𐲯𐲉𐲦:‏𐲤𐲭𐲗𐲉𐲇:‏𐲉𐲖                   <br />
-𐲙𐲋𐲠𐲉𐲓:‏𐲮𐲉𐲥𐲐𐲓:‏𐲓𐲞𐲢𐲭𐲖                   <br />
-𐲤:‏𐲀𐲯:‏𐲉𐲘𐲂𐲉𐲢:‏𐲘𐲐𐲖𐲖𐲐𐲜𐲐𐲙𐲀𐲓                   <br />
-𐲥𐲉𐲘𐲋𐲂𐲉𐲙:‏𐲎𐲁𐲥𐲓𐲞𐲚:‏𐲭𐲖                   <br />
-                   <br />
-𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖                   <br />
-𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢:‏                   <br />
-𐲉𐲯:‏𐲋𐲖𐲦𐲉𐲦𐲟𐲇:‏𐲤:‏𐲏𐲀:‏𐲉𐲖𐲂𐲪𐲓𐲁𐲖                   <br />
-𐲏𐲀𐲙𐲦𐲒𐲁𐲮𐲀𐲖:‏𐲉𐲯:‏𐲦𐲀𐲓𐲀𐲢                   <br />
-                   <br />
-𐲀:‏𐲙𐲀𐲎:‏𐲮𐲐𐲖𐲁𐲍𐲛𐲙:‏𐲉:‏𐲓𐲐𐲮𐲭𐲖                   <br />
-𐲙𐲐𐲙𐲆𐲉𐲙:‏𐲥𐲁𐲘𐲛𐲇𐲢𐲀:‏𐲏𐲉𐲗                   <br />
-𐲁𐲖𐲇𐲒𐲛𐲙:‏𐲮𐲀𐲎:‏𐲮𐲉𐲢𐲒𐲉𐲙:‏𐲤𐲛𐲢𐲤:‏𐲓𐲉𐲯𐲉:‏                   <br />
-𐲐𐲦𐲦:‏𐲋𐲖𐲙𐲉𐲇:‏𐲏𐲀𐲖𐲙𐲛𐲇:‏𐲓𐲉𐲖𐲖                   <br />
+𐲉𐲎:‏𐲉𐲯𐲢𐲉𐲇𐲋𐲮:‏𐲆𐲀𐲦𐲛𐲖𐲦 <br />
+<br />
+𐲐𐲦𐲦:‏𐲓𐲬𐲯𐲇𐲦𐲉𐲙𐲉𐲓:‏𐲏𐲛𐲙𐲋𐲢𐲦:‏𐲀:‏𐲏𐲟𐲤 <br />
+𐲁𐲢𐲠𐲁𐲇𐲙𐲀𐲓:‏𐲏𐲀𐲇𐲀𐲐 <br />
+𐲐𐲦𐲦:‏𐲦𐲞𐲢𐲦𐲉𐲓:‏𐲞𐲤𐲥𐲉:‏𐲢𐲀𐲂𐲐𐲍𐲁𐲦 <br />
+𐲏𐲪𐲚𐲀𐲇𐲙𐲀𐲓:‏𐲓𐲀𐲢𐲒𐲀𐲐 <br />
+<br />
+𐲥𐲀𐲂𐲀𐲇𐲤𐲁𐲍:‏𐲐𐲦𐲦𐲉𐲙:‏𐲏𐲛𐲢𐲇𐲛𐲯𐲁𐲓 <br />
+𐲮𐲋𐲢𐲉𐲤:‏𐲯𐲁𐲥𐲖𐲜𐲐𐲇𐲀𐲦 <br />
+𐲤:‏𐲉𐲖𐲏𐲪𐲖𐲖𐲦𐲀𐲙𐲀𐲓:‏𐲖𐲉𐲍𐲒𐲛𐲂𐲂𐲒𐲀𐲐𐲙𐲓 <br />
+𐲀:‏𐲏𐲛𐲤𐲥𐲫:‏𐲏𐲀𐲢𐲄:‏𐲀𐲖𐲀𐲦𐲦 <br />
+<br />
+𐲋𐲤:‏𐲀𐲙𐲚𐲐:‏𐲂𐲀𐲖𐲥𐲉𐲢𐲉𐲙𐲆𐲉:‏𐲓𐲞𐲯𐲦 <br />
+𐲛𐲗:‏𐲤𐲛𐲓:‏𐲮𐲐𐲥𐲁𐲗:‏𐲪𐲦𐲁𐲙 <br />
+𐲘𐲉𐲍𐲌𐲛𐲎𐲮𐲀:‏𐲂𐲁𐲢:‏𐲇𐲉:‏𐲦𐲞𐲢𐲮𐲉:‏𐲙𐲉𐲘 <br />
+𐲋𐲖:‏𐲙𐲉𐲘𐲯𐲉𐲦:‏𐲉:‏𐲏𐲀𐲯𐲁𐲙 <br />
+<br />
+𐲤:‏𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲯𐲁𐲒𐲀:‏𐲙𐲀𐲎:‏𐲮𐲐𐲖𐲁𐲍 <br />
+𐲏𐲛𐲯𐲯𐲁𐲇:‏𐲂𐲁𐲦𐲢𐲀𐲙:‏𐲓𐲐𐲁𐲖𐲦:‏ <br />
+𐲉𐲎:‏𐲉𐲯𐲢𐲉𐲇𐲋𐲮𐲐:‏𐲥𐲉𐲙𐲮𐲉𐲇𐲋𐲤 <br />
+𐲓𐲋𐲢:‏𐲋𐲖𐲦𐲉𐲦:‏𐲮𐲀𐲎:‏𐲏𐲀𐲖𐲁𐲖𐲦 <br />
+<br />
+𐲀𐲯:‏𐲙𐲉𐲘:‏𐲖𐲉𐲏𐲉𐲦:‏𐲏𐲛𐲎:‏𐲀𐲙𐲚𐲐:‏𐲥𐲑𐲮 <br />
+𐲏𐲐𐲁𐲂𐲀:‏𐲛𐲙𐲦𐲀:‏𐲮𐲋𐲢𐲦 <br />
+𐲤:‏𐲓𐲉𐲤𐲉𐲢𐲮𐲂𐲉𐲙:‏𐲀𐲙𐲚𐲐:‏𐲏𐲭:‏𐲓𐲉𐲂𐲉𐲖 <br />
+𐲥𐲀𐲓𐲀𐲇𐲦:‏𐲘𐲉𐲍:‏𐲀:‏𐲏𐲛𐲙𐲋𐲢𐲦 <br />
+<br />       
+𐲀𐲯:‏𐲙𐲉𐲘:‏𐲖𐲉𐲏𐲉𐲦:‏𐲏𐲛𐲎:‏𐲋𐲥:‏𐲉𐲢𐲟 <br />
+𐲋𐲤:‏𐲛𐲗:‏𐲥𐲉𐲙𐲦:‏𐲀𐲓𐲀𐲢𐲀𐲦 <br />
+𐲏𐲐𐲁𐲂𐲀:‏𐲤𐲛𐲢𐲮𐲀𐲇𐲛𐲯𐲯𐲀𐲙𐲀𐲓 <br />
+𐲉𐲎:‏𐲁𐲦𐲛𐲓𐲤𐲫𐲗:‏𐲀𐲖𐲀𐲦𐲦 <br />
+<br />
+𐲘𐲋𐲍:‏𐲒𐲟𐲙𐲐:‏𐲓𐲉𐲖𐲖:‏𐲘𐲋𐲍:‏𐲒𐲟𐲙𐲐:‏𐲌𐲛𐲍 <br />
+𐲉𐲎:‏𐲒𐲛𐲂𐲂:‏𐲓𐲛𐲢:‏𐲘𐲉𐲗:‏𐲪𐲦𐲁𐲙 <br />
+𐲂𐲪𐲯𐲍𐲜:‏𐲐𐲘𐲁𐲇𐲤𐲁𐲍:‏𐲉𐲠𐲉𐲇𐲉𐲯 <br />
+𐲥𐲁𐲯𐲉𐲯𐲢𐲉𐲓:‏𐲀𐲒𐲀𐲓𐲁𐲙 <br />
+<br />
+𐲮𐲀𐲎:‏𐲒𐲟𐲙𐲐:‏𐲌𐲛𐲍:‏𐲏𐲀:‏𐲒𐲟𐲙𐲐:‏𐲓𐲉𐲖𐲖 <br />
+𐲀:‏𐲙𐲀𐲎𐲥𐲉𐲢𐲭:‏𐲏𐲀𐲖𐲁𐲖 <br />
+𐲏𐲛𐲖:‏𐲀:‏𐲦𐲉𐲘𐲉𐲦𐲓𐲉𐲯𐲋𐲤:‏𐲌𐲞𐲖𐲞𐲦𐲦 <br />
+𐲉𐲎:‏𐲛𐲢𐲥𐲁𐲍:‏𐲮𐲋𐲢𐲂𐲉𐲙:‏𐲁𐲖𐲖 <br />
+<br />
+𐲤:‏𐲀:‏𐲤𐲑𐲢𐲦:‏𐲏𐲛𐲖:‏𐲙𐲉𐲘𐲯𐲉𐲦:‏𐲤𐲭𐲗𐲉𐲇:‏𐲉𐲖 <br />
+𐲙𐲋𐲠𐲉𐲓:‏𐲮𐲉𐲥𐲐𐲓:‏𐲓𐲞𐲢𐲭𐲖 <br />
+𐲤:‏𐲀𐲯:‏𐲉𐲘𐲂𐲉𐲢:‏𐲘𐲐𐲖𐲖𐲐𐲜𐲐𐲙𐲀𐲓 <br />
+𐲥𐲉𐲘𐲋𐲂𐲉𐲙:‏𐲎𐲁𐲥𐲓𐲞𐲚:‏𐲭𐲖 <br />
+<br />
+𐲖𐲋𐲎:‏𐲏𐲑𐲮𐲉:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖 <br />
+𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲛𐲏:‏𐲘𐲀𐲎𐲀𐲢:‏ <br />
+𐲉𐲯:‏𐲋𐲖𐲦𐲉𐲦𐲟𐲇:‏𐲤:‏𐲏𐲀:‏𐲉𐲖𐲂𐲪𐲓𐲁𐲖 <br />
+𐲏𐲀𐲙𐲦𐲒𐲁𐲮𐲀𐲖:‏𐲉𐲯:‏𐲦𐲀𐲓𐲀𐲢 <br />
+<br />
+𐲀:‏𐲙𐲀𐲎:‏𐲮𐲐𐲖𐲁𐲍𐲛𐲙:‏𐲉:‏𐲓𐲐𐲮𐲭𐲖 <br />
+𐲙𐲐𐲙𐲆𐲉𐲙:‏𐲥𐲁𐲘𐲛𐲇𐲢𐲀:‏𐲏𐲉𐲗 <br />
+𐲁𐲖𐲇𐲒𐲛𐲙:‏𐲮𐲀𐲎:‏𐲮𐲉𐲢𐲒𐲉𐲙:‏𐲤𐲛𐲢𐲤:‏𐲓𐲉𐲯𐲉:‏ <br />
+𐲐𐲦𐲦:‏𐲋𐲖𐲙𐲉𐲇:‏𐲏𐲀𐲖𐲙𐲛𐲇:‏𐲓𐲉𐲖𐲖 <br />
 </p>
                             
                            <h2 style=text-align:right>𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Himnusz)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">
-𐳺                   <br />
-𐲐𐲤𐲦𐲉𐲙:‏𐲁𐲖𐲇𐲇:‏𐲘𐲉𐲍:‏𐲀:‏𐲘𐲀𐲎𐲀𐲢𐲦                   <br />
-𐲒𐲜:‏𐲓𐲉𐲇𐲮𐲮𐲉𐲖:‏𐲂𐲟𐲤𐲋𐲍𐲍𐲉𐲖                   <br />
-𐲚𐲫𐲒𐲦𐲤:‏𐲌𐲉𐲖𐲋𐲒𐲉:‏𐲮𐲋𐲇𐲟:‏𐲓𐲀𐲢𐲦                   <br />
-𐲏𐲀:‏𐲓𐲬𐲯𐲇:‏𐲉𐲖𐲖𐲉𐲙𐲤𐲋𐲍𐲍𐲉𐲖                   <br />
-𐲂𐲀𐲖:‏𐲤𐲛𐲢𐲤:‏𐲀𐲓𐲐𐲦:‏𐲢𐲋𐲍𐲉𐲙:‏𐲦𐲋𐲠                   <br />
-𐲏𐲛𐲯𐲯:‏𐲢𐲁:‏𐲮𐲑𐲍:‏𐲉𐲥𐲦𐲉𐲙𐲇𐲟𐲦                   <br />
-𐲘𐲉𐲍𐲂𐲭𐲙𐲏𐲟𐲇𐲦𐲉:‏𐲘𐲁𐲢:‏𐲉:‏𐲙𐲋𐲠                   <br />
-𐲀:‏𐲘𐲫𐲖𐲦𐲀𐲦:‏𐲤:‏𐲒𐲞𐲮𐲉𐲙𐲇𐲟𐲦                   <br />
-                   <br />
-𐳺𐳺                   <br />
-𐲟𐲤𐲉𐲐𐲙𐲓𐲉𐲦:‏𐲌𐲉𐲖𐲏𐲛𐲯𐲁𐲇                   <br />
-𐲓𐲁𐲢𐲠𐲁𐲦:‏𐲥𐲉𐲙𐲦:‏𐲂𐲋𐲢𐲄𐲋𐲢𐲉                   <br />
-𐲁𐲖𐲦𐲀𐲖𐲀𐲇:‏𐲚𐲉𐲢𐲦:‏𐲥𐲋𐲠:‏𐲏𐲀𐲯𐲁𐲦                   <br />
-𐲂𐲉𐲙𐲇𐲉𐲍𐲫𐲯𐲙𐲀𐲓:‏𐲮𐲋𐲢𐲉                   <br />
-𐲤:‏𐲘𐲉𐲢𐲢𐲉:‏𐲯𐲫𐲍𐲙𐲀𐲓:‏𐲏𐲀𐲂𐲒𐲀𐲐                   <br />
-𐲦𐲐𐲥𐲁𐲙𐲀𐲓:‏𐲇𐲪𐲙𐲁𐲙𐲀𐲓                   <br />
-𐲁𐲢𐲠𐲁𐲇:‏𐲏𐲟𐲤:‏𐲘𐲀𐲍𐲯𐲀𐲦𐲒𐲀𐲐                   <br />
-𐲌𐲉𐲖𐲮𐲐𐲢𐲁𐲍𐲛𐲯𐲁𐲙𐲀𐲓                   <br />
-                   <br />
-𐳺𐳺𐳺                   <br />
-𐲋𐲢𐲦𐲬𐲙𐲓:‏𐲓𐲪𐲙𐲤𐲁𐲍:‏𐲘𐲉𐲯𐲉𐲐𐲙                   <br />
-𐲋𐲢𐲦:‏𐲓𐲀𐲖𐲁𐲥𐲦:‏𐲖𐲉𐲙𐲍𐲉𐲦𐲦𐲋𐲖                   <br />
-𐲦𐲛𐲓𐲀𐲒:‏𐲥𐲟𐲖𐲟𐲮𐲉𐲤𐲥𐲉𐲐𐲙                   <br />
-𐲙𐲉𐲓𐲦𐲁𐲢𐲦:‏𐲆𐲉𐲠𐲉𐲍𐲦𐲉𐲦𐲦𐲋𐲖                   <br />
-𐲯𐲁𐲥𐲖𐲜𐲙𐲓:‏𐲎𐲀𐲓𐲢𐲀𐲙:‏𐲠𐲖𐲁𐲙𐲦𐲁𐲖𐲁𐲇                   <br />
-𐲮𐲀𐲇:‏𐲦𐲞𐲢𐲞𐲓:‏𐲤𐲁𐲙𐲄𐲁𐲢𐲀                   <br />
-𐲤:‏𐲚𐲞𐲍𐲦𐲉:‏𐲘𐲁𐲨𐲁𐲤:‏𐲂𐲫𐲤:‏𐲏𐲀𐲇𐲁𐲦                   <br />
-𐲂𐲋𐲆𐲙𐲉𐲓:‏𐲂𐲬𐲥𐲓𐲉:‏𐲮𐲁𐲢𐲀                   <br />
-                   <br />
-𐳺𐳺𐳺𐳺                   <br />
-𐲏𐲀𐲒𐲏:‏𐲇𐲉:‏𐲂𐲭𐲙𐲉𐲐𐲙𐲓:‏𐲘𐲐𐲀𐲦𐲦                   <br />
-𐲎𐲫𐲖𐲦:‏𐲏𐲀𐲢𐲀𐲍:‏𐲓𐲉𐲂𐲖𐲉𐲇𐲂𐲉𐲙                   <br />
-𐲤:‏𐲉𐲖𐲤𐲫𐲒𐲦𐲁𐲇:‏𐲮𐲐𐲖𐲖𐲁𐲘𐲐𐲇𐲀𐲦                   <br />
-𐲇𐲞𐲢𐲍𐲟:‏𐲌𐲉𐲖𐲖𐲉𐲍𐲉𐲇𐲂𐲉𐲙                   <br />
-𐲘𐲛𐲤𐲦:‏𐲢𐲀𐲂𐲖𐲜:‏𐲘𐲛𐲙𐲍𐲛𐲖:‏𐲚𐲐𐲖𐲁𐲦                   <br />
-𐲯𐲫𐲍𐲀𐲦𐲦𐲀𐲇:‏𐲌𐲉𐲖𐲉𐲦𐲦𐲬𐲙𐲓                   <br />
-𐲘𐲀𐲒𐲇:‏𐲦𐲞𐲢𐲞𐲓𐲦𐲟𐲖:‏𐲢𐲀𐲂𐲐𐲍𐲁𐲦                   <br />
-𐲮𐲁𐲖𐲖𐲀𐲐𐲙𐲓𐲢𐲀:‏𐲮𐲉𐲦𐲦𐲬𐲙𐲓                   <br />
-                   <br />
-𐳻                   <br />
-𐲏𐲁𐲚𐲥𐲛𐲢:‏𐲯𐲉𐲙𐲍𐲉𐲦𐲦:‏𐲀𐲒𐲓𐲀𐲐𐲙                   <br />
-𐲛𐲯𐲘𐲁𐲙:‏𐲮𐲀𐲇:‏𐲙𐲋𐲠𐲋𐲙𐲉𐲓                   <br />
-𐲮𐲉𐲢𐲦:‏𐲏𐲀𐲇𐲪𐲙𐲓:‏𐲆𐲛𐲙𐲦𐲏𐲀𐲖𐲘𐲀𐲐𐲙                   <br />
-𐲎𐲟𐲯𐲉𐲇𐲉𐲖𐲘𐲐:‏𐲋𐲙𐲉𐲓                   <br />
-𐲏𐲁𐲚𐲥𐲛𐲢:‏𐲦𐲁𐲘𐲀𐲇𐲦:‏𐲦𐲉𐲙𐲌𐲐𐲀𐲇                   <br />
-𐲥𐲋𐲠:‏𐲏𐲀𐲯𐲁𐲘:‏𐲓𐲉𐲂𐲖𐲉𐲇𐲢𐲉                   <br />
-𐲤:‏𐲖𐲉𐲦𐲦𐲋𐲖:‏𐲘𐲀𐲍𐲯𐲀𐲦𐲛𐲇:‏𐲘𐲐𐲀𐲦𐲦                   <br />
-𐲘𐲀𐲍𐲯𐲀𐲦𐲛𐲇:‏𐲏𐲀𐲘𐲮𐲮𐲉𐲇𐲢𐲉                   <br />
-                   <br />
-𐳻𐳺                   <br />
+                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">
+𐳺 <br />
+𐲐𐲤𐲦𐲉𐲙:‏𐲁𐲖𐲇𐲇:‏𐲘𐲉𐲍:‏𐲀:‏𐲘𐲀𐲎𐲀𐲢𐲦 <br />
+𐲒𐲜:‏𐲓𐲉𐲇𐲮𐲮𐲉𐲖:‏𐲂𐲟𐲤𐲋𐲍𐲍𐲉𐲖 <br />
+𐲚𐲫𐲒𐲦𐲤:‏𐲌𐲉𐲖𐲋𐲒𐲉:‏𐲮𐲋𐲇𐲟:‏𐲓𐲀𐲢𐲦 <br />
+𐲏𐲀:‏𐲓𐲬𐲯𐲇:‏𐲉𐲖𐲖𐲉𐲙𐲤𐲋𐲍𐲍𐲉𐲖 <br />
+𐲂𐲀𐲖:‏𐲤𐲛𐲢𐲤:‏𐲀𐲓𐲐𐲦:‏𐲢𐲋𐲍𐲉𐲙:‏𐲦𐲋𐲠 <br />
+𐲏𐲛𐲯𐲯:‏𐲢𐲁:‏𐲮𐲑𐲍:‏𐲉𐲥𐲦𐲉𐲙𐲇𐲟𐲦 <br />
+𐲘𐲉𐲍𐲂𐲭𐲙𐲏𐲟𐲇𐲦𐲉:‏𐲘𐲁𐲢:‏𐲉:‏𐲙𐲋𐲠 <br />
+𐲀:‏𐲘𐲫𐲖𐲦𐲀𐲦:‏𐲤:‏𐲒𐲞𐲮𐲉𐲙𐲇𐲟𐲦 <br />
+<br />
+𐳺𐳺 <br />
+𐲟𐲤𐲉𐲐𐲙𐲓𐲉𐲦:‏𐲌𐲉𐲖𐲏𐲛𐲯𐲁𐲇 <br />
+𐲓𐲁𐲢𐲠𐲁𐲦:‏𐲥𐲉𐲙𐲦:‏𐲂𐲋𐲢𐲄𐲋𐲢𐲉 <br />
+𐲁𐲖𐲦𐲀𐲖𐲀𐲇:‏𐲚𐲉𐲢𐲦:‏𐲥𐲋𐲠:‏𐲏𐲀𐲯𐲁𐲦 <br />
+𐲂𐲉𐲙𐲇𐲉𐲍𐲫𐲯𐲙𐲀𐲓:‏𐲮𐲋𐲢𐲉 <br />
+𐲤:‏𐲘𐲉𐲢𐲢𐲉:‏𐲯𐲫𐲍𐲙𐲀𐲓:‏𐲏𐲀𐲂𐲒𐲀𐲐 <br />
+𐲦𐲐𐲥𐲁𐲙𐲀𐲓:‏𐲇𐲪𐲙𐲁𐲙𐲀𐲓  <br />
+𐲁𐲢𐲠𐲁𐲇:‏𐲏𐲟𐲤:‏𐲘𐲀𐲍𐲯𐲀𐲦𐲒𐲀𐲐 <br />
+𐲌𐲉𐲖𐲮𐲐𐲢𐲁𐲍𐲛𐲯𐲁𐲙𐲀𐲓 <br />
+<br />
+𐳺𐳺𐳺 <br />
+𐲋𐲢𐲦𐲬𐲙𐲓:‏𐲓𐲪𐲙𐲤𐲁𐲍:‏𐲘𐲉𐲯𐲉𐲐𐲙 <br />
+𐲋𐲢𐲦:‏𐲓𐲀𐲖𐲁𐲥𐲦:‏𐲖𐲉𐲙𐲍𐲉𐲦𐲦𐲋𐲖 <br />
+𐲦𐲛𐲓𐲀𐲒:‏𐲥𐲟𐲖𐲟𐲮𐲉𐲤𐲥𐲉𐲐𐲙 <br />
+𐲙𐲉𐲓𐲦𐲁𐲢𐲦:‏𐲆𐲉𐲠𐲉𐲍𐲦𐲉𐲦𐲦𐲋𐲖 <br />
+𐲯𐲁𐲥𐲖𐲜𐲙𐲓:‏𐲎𐲀𐲓𐲢𐲀𐲙:‏𐲠𐲖𐲁𐲙𐲦𐲁𐲖𐲁𐲇 <br />
+𐲮𐲀𐲇:‏𐲦𐲞𐲢𐲞𐲓:‏𐲤𐲁𐲙𐲄𐲁𐲢𐲀 <br />
+𐲤:‏𐲚𐲞𐲍𐲦𐲉:‏𐲘𐲁𐲨𐲁𐲤:‏𐲂𐲫𐲤:‏𐲏𐲀𐲇𐲁𐲦 <br />
+𐲂𐲋𐲆𐲙𐲉𐲓:‏𐲂𐲬𐲥𐲓𐲉:‏𐲮𐲁𐲢𐲀 <br />
+<br />
+𐳺𐳺𐳺𐳺 <br />
+𐲏𐲀𐲒𐲏:‏𐲇𐲉:‏𐲂𐲭𐲙𐲉𐲐𐲙𐲓:‏𐲘𐲐𐲀𐲦𐲦 <br />
+𐲎𐲫𐲖𐲦:‏𐲏𐲀𐲢𐲀𐲍:‏𐲓𐲉𐲂𐲖𐲉𐲇𐲂𐲉𐲙 <br />
+𐲤:‏𐲉𐲖𐲤𐲫𐲒𐲦𐲁𐲇:‏𐲮𐲐𐲖𐲖𐲁𐲘𐲐𐲇𐲀𐲦 <br />
+𐲇𐲞𐲢𐲍𐲟:‏𐲌𐲉𐲖𐲖𐲉𐲍𐲉𐲇𐲂𐲉𐲙 <br />
+𐲘𐲛𐲤𐲦:‏𐲢𐲀𐲂𐲖𐲜:‏𐲘𐲛𐲙𐲍𐲛𐲖:‏𐲚𐲐𐲖𐲁𐲦 <br />
+𐲯𐲫𐲍𐲀𐲦𐲦𐲀𐲇:‏𐲌𐲉𐲖𐲉𐲦𐲦𐲬𐲙𐲓 <br />
+𐲘𐲀𐲒𐲇:‏𐲦𐲞𐲢𐲞𐲓𐲦𐲟𐲖:‏𐲢𐲀𐲂𐲐𐲍𐲁𐲦 <br />
+𐲮𐲁𐲖𐲖𐲀𐲐𐲙𐲓𐲢𐲀:‏𐲮𐲉𐲦𐲦𐲬𐲙𐲓 <br />
+<br />
+𐳻 <br />
+𐲏𐲁𐲚𐲥𐲛𐲢:‏𐲯𐲉𐲙𐲍𐲉𐲦𐲦:‏𐲀𐲒𐲓𐲀𐲐𐲙 <br />
+𐲛𐲯𐲘𐲁𐲙:‏𐲮𐲀𐲇:‏𐲙𐲋𐲠𐲋𐲙𐲉𐲓 <br />
+𐲮𐲉𐲢𐲦:‏𐲏𐲀𐲇𐲪𐲙𐲓:‏𐲆𐲛𐲙𐲦𐲏𐲀𐲖𐲘𐲀𐲐𐲙 <br />
+𐲎𐲟𐲯𐲉𐲇𐲉𐲖𐲘𐲐:‏𐲋𐲙𐲉𐲓 <br />
+𐲏𐲁𐲚𐲥𐲛𐲢:‏𐲦𐲁𐲘𐲀𐲇𐲦:‏𐲦𐲉𐲙𐲌𐲐𐲀𐲇 <br />
+𐲥𐲋𐲠:‏𐲏𐲀𐲯𐲁𐲘:‏𐲓𐲉𐲂𐲖𐲉𐲇𐲢𐲉 <br />
+𐲤:‏𐲖𐲉𐲦𐲦𐲋𐲖:‏𐲘𐲀𐲍𐲯𐲀𐲦𐲛𐲇:‏𐲘𐲐𐲀𐲦𐲦 <br />
+𐲘𐲀𐲍𐲯𐲀𐲦𐲛𐲇:‏𐲏𐲀𐲘𐲮𐲮𐲉𐲇𐲢𐲉 <br />
+<br />
+𐳻𐳺 <br />
 𐲂𐲫𐲒𐲦:‏𐲀𐲯:‏𐲬𐲖𐲇𐲞𐲯𐲞𐲦𐲦:‏𐲤:‏𐲌𐲉𐲖𐲋 <br />
 𐲓𐲀𐲢𐲇:‏𐲚𐲫𐲖𐲦:‏𐲂𐲀𐲢𐲖𐲀𐲙𐲍𐲒𐲁𐲂𐲀𐲙 <br />
 𐲥𐲉𐲢𐲦𐲉:‏𐲙𐲋𐲯𐲉𐲦𐲦:‏𐲤:‏𐲙𐲉𐲘:‏𐲖𐲉𐲖𐲋 <br />
@@ -421,51 +422,51 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 </p>
                             <h2 style=text-align:right>𐲥𐲋𐲓𐲉𐲗 𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Székely Himnusz)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:19px">
-𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲘𐲉𐲢𐲢𐲉:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦                   <br />
-𐲍𐲞𐲢𐲞𐲙𐲎𐲞𐲤:‏𐲫𐲦𐲛𐲙:‏𐲤𐲞𐲦𐲋𐲦:‏𐲋𐲒𐲒𐲉𐲖𐲉𐲙                   <br />
-𐲮𐲉𐲯𐲉𐲤𐲇:‏𐲘𐲋𐲍:‏𐲉𐲎𐲥𐲉𐲢:‏𐲎𐲟𐲯𐲉𐲖𐲉𐲘𐲢𐲉:‏𐲙𐲋𐲠𐲉𐲇                   <br />
-𐲆𐲀𐲂𐲀:‏𐲓𐲐𐲢𐲁𐲗𐲌𐲐:‏𐲆𐲐𐲖𐲖𐲀𐲍:‏𐲞𐲤𐲮𐲋𐲚𐲉𐲙                   <br />
-                   <br />
-𐲘𐲀𐲢𐲛𐲓𐲚𐲐:‏𐲥𐲋𐲓𐲉𐲗:‏𐲠𐲛𐲢𐲖𐲐𐲓:‏𐲘𐲐𐲙𐲦:‏𐲀:‏𐲥𐲐𐲓𐲖𐲀                   <br />
-𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲢𐲄𐲁𐲙𐲀𐲓:‏𐲯𐲀𐲒𐲖𐲜:‏𐲦𐲉𐲙𐲍𐲉𐲢𐲋𐲙                   <br />
-𐲌𐲉𐲒𐲬𐲙𐲓:‏𐲀𐲯:‏𐲁𐲢:‏𐲒𐲀𐲒:‏𐲥𐲁𐲯𐲥𐲛𐲢:‏𐲉𐲖𐲂𐲛𐲢𐲑𐲦𐲒𐲀                   <br />
-𐲙𐲉:‏𐲏𐲀𐲎𐲇:‏𐲉𐲖𐲮𐲉𐲥𐲙𐲐:‏𐲉𐲢𐲇𐲋𐲗𐲦:‏𐲐𐲤𐲦𐲉𐲙𐲬𐲙𐲓                   <br />
-                   <br />
-𐲀𐲘𐲉𐲇𐲇𐲐𐲍:‏𐲋𐲖𐲬𐲙𐲓:‏𐲘𐲀𐲎𐲀𐲢:‏𐲀𐲒𐲓𐲫:‏𐲙𐲋𐲠𐲉𐲓                   <br />
-𐲘𐲉𐲍𐲦𐲞𐲢𐲙𐲐:‏𐲖𐲉𐲖𐲓𐲬𐲙𐲓:‏𐲙𐲉𐲘:‏𐲖𐲉𐲏𐲉𐲦:‏𐲤𐲛𐲏𐲀                   <br />
-𐲥𐲬𐲖𐲉𐲤𐲤𐲬𐲙𐲓:‏𐲂𐲁𐲢𐲏𐲛𐲖:‏𐲌𐲞𐲖𐲇𐲬𐲙𐲓:‏𐲂𐲁𐲢𐲘𐲉𐲗:‏𐲠𐲛𐲙𐲦𐲒𐲁𐲙                   <br />
-𐲖𐲉𐲎𐲉𐲙:‏𐲀:‏𐲤𐲛𐲢𐲤𐲪𐲙𐲓:‏𐲒𐲜:‏𐲮𐲀𐲎:‏𐲘𐲛𐲤𐲦𐲛𐲏𐲀                   <br />
-                   <br />
-𐲓𐲉𐲤𐲉𐲢𐲮𐲉𐲤:‏𐲘𐲫𐲖𐲦𐲪𐲙𐲓:‏𐲋𐲮𐲉𐲯𐲢𐲉𐲇𐲉𐲤:‏𐲂𐲀𐲖𐲤𐲛𐲢𐲤                   <br />
-𐲦𐲀𐲦𐲁𐲢-𐲦𐲞𐲢𐲞𐲓:‏𐲇𐲫𐲖𐲦:‏𐲀:‏𐲖𐲀𐲂𐲀𐲙𐲄:‏𐲢𐲀𐲂𐲐𐲍𐲁𐲖𐲦                   <br />
-𐲒𐲪𐲤𐲤𐲪𐲙𐲓:‏𐲉𐲖:‏𐲏𐲛𐲙𐲂𐲀𐲙:‏𐲥𐲋𐲓𐲉𐲗:‏𐲘𐲀𐲎𐲀𐲢:‏𐲌𐲞𐲖𐲇𐲞𐲙                   <br />
-𐲥𐲀𐲂𐲀𐲇:‏𐲏𐲀𐲯𐲁𐲂𐲀𐲙:‏𐲋𐲖𐲒𐲬𐲙𐲓:‏𐲂𐲛𐲖𐲇𐲛𐲍𐲀𐲙                   <br />
-                   <br />
-𐲋𐲇𐲉𐲤:‏𐲥𐲭𐲯𐲀𐲚𐲁𐲙𐲓:‏𐲓𐲞𐲚𐲞𐲢𐲞𐲍𐲮𐲉:‏𐲓𐲋𐲢𐲬𐲙𐲓                   <br />
-𐲘𐲉𐲙𐲦𐲤𐲇:‏𐲘𐲉𐲍:‏𐲉:‏𐲙𐲋𐲠𐲉𐲦:‏𐲮𐲋𐲢𐲯𐲟:‏𐲙𐲉𐲘𐲯𐲉𐲦𐲉𐲦                   <br />
-𐲒𐲪𐲤𐲤𐲪𐲙𐲓:‏𐲉𐲖:‏𐲏𐲛𐲙𐲂𐲀𐲙:‏𐲥𐲋𐲓𐲉𐲗:‏𐲘𐲀𐲎𐲀𐲢:‏𐲌𐲞𐲖𐲇𐲞𐲙                   <br />
-𐲥𐲀𐲂𐲀𐲇:‏𐲏𐲀𐲯𐲁𐲂𐲀𐲙:‏𐲋𐲖𐲒𐲬𐲙𐲓:‏𐲂𐲛𐲖𐲇𐲛𐲍𐲀𐲙                   <br />
-                   <br />
-𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲐𐲙𐲙𐲉𐲙:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦                   <br />
-𐲛𐲢𐲥𐲁𐲍𐲏𐲀𐲦𐲁𐲢𐲛𐲙:‏𐲜𐲄𐲉𐲁𐲙𐲛𐲙:‏𐲁𐲦                   <br />
-𐲒𐲞𐲒𐲒:‏𐲏𐲁𐲦:‏𐲓𐲐𐲢𐲁𐲗𐲪𐲙𐲓:‏𐲐𐲦𐲦:‏𐲮𐲁𐲢:‏𐲀:‏𐲦𐲉:‏𐲙𐲋𐲠𐲉𐲇                   <br />
-𐲥𐲋𐲓𐲉𐲗:‏𐲙𐲉𐲘𐲯𐲉𐲦𐲉𐲇:‏𐲓𐲁𐲢𐲠𐲁𐲦-𐲂𐲋𐲢𐲄𐲉𐲓𐲉𐲙                   <br />
-                   <br />
-𐲏𐲟𐲤:‏𐲥𐲀𐲂𐲀𐲇𐲤𐲁𐲍𐲁𐲦:‏𐲉𐲖𐲮𐲉𐲥𐲦𐲐:‏𐲤𐲉𐲍𐲉𐲤𐲮𐲁𐲢                   <br />
-𐲘𐲁𐲇𐲋𐲌𐲀𐲖𐲮𐲁𐲢𐲀:‏𐲌𐲁𐲒𐲜𐲙:‏𐲓𐲉𐲖𐲖:‏𐲦𐲉𐲓𐲐𐲙𐲦𐲤                   <br />
-𐲌𐲞𐲖𐲇𐲉𐲇:‏𐲇𐲫𐲤:‏𐲓𐲐𐲙𐲆𐲋𐲦:‏𐲙𐲋𐲠𐲉𐲓:‏𐲋𐲖𐲐𐲓:‏𐲤:‏𐲇𐲫𐲖𐲒𐲁𐲓                   <br />
-𐲌𐲐𐲀𐲇𐲙𐲀𐲓:‏𐲤𐲛𐲓𐲥𐲛𐲢:‏𐲘𐲋𐲍:‏𐲓𐲉𐲚𐲉𐲢𐲉:‏𐲤𐲐𐲙𐲆                   <br />
-                   <br />
-𐲘𐲁𐲢:‏𐲘𐲁𐲤𐲌𐲋𐲖𐲉𐲯𐲉𐲢:‏𐲋𐲮:‏𐲜𐲦𐲀:‏𐲆𐲀𐲂𐲀:‏𐲙𐲋𐲠𐲉                   <br />
-𐲤𐲛𐲓:‏𐲮𐲐𐲏𐲀𐲢𐲦:‏𐲋𐲖𐲦:‏𐲁𐲦:‏𐲤𐲛𐲢𐲤𐲀:‏𐲘𐲛𐲤𐲦𐲛𐲏𐲀                   <br />
-𐲓𐲬𐲖𐲤𐲟:‏𐲉𐲖𐲖𐲉𐲙𐲤𐲋𐲍:‏𐲒𐲀𐲒:‏𐲇𐲉:‏𐲎𐲀𐲓𐲢𐲀𐲙:‏𐲦𐲋𐲠𐲦𐲉                   <br />
-𐲙𐲉𐲘:‏𐲋𐲢𐲦𐲉𐲦𐲦:‏𐲉𐲎𐲉𐲦:‏𐲛𐲦𐲦𐲏𐲛𐲙:‏𐲤𐲉𐲘:‏𐲤𐲛𐲏𐲀                   <br />
-                   <br />
-𐲘𐲀𐲢𐲛𐲓𐲚𐲐:‏𐲥𐲋𐲓𐲉𐲗:‏𐲠𐲛𐲢𐲖𐲐𐲓:‏𐲘𐲐𐲙𐲦:‏𐲀:‏𐲥𐲐𐲓𐲖𐲀                   <br />
-𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲢𐲄𐲁𐲙𐲀𐲓:‏𐲯𐲀𐲒𐲖𐲜:‏𐲦𐲉𐲙𐲍𐲉𐲢𐲋𐲙                   <br />
-𐲌𐲉𐲒𐲬𐲙𐲓:‏𐲀𐲯:‏𐲁𐲢:‏𐲒𐲀𐲒:‏𐲥𐲁𐲯𐲥𐲛𐲢:‏𐲉𐲖𐲂𐲛𐲢𐲑𐲦𐲒𐲀                   <br />
-𐲙𐲉:‏𐲏𐲀𐲎𐲇:‏𐲉𐲖𐲮𐲉𐲥𐲙𐲐:‏𐲉𐲢𐲇𐲋𐲗𐲦:‏𐲐𐲤𐲦𐲉𐲙𐲬𐲙𐲓                   <br />
+                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">
+𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲘𐲉𐲢𐲢𐲉:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦 <br />
+𐲍𐲞𐲢𐲞𐲙𐲎𐲞𐲤:‏𐲫𐲦𐲛𐲙:‏𐲤𐲞𐲦𐲋𐲦:‏𐲋𐲒𐲒𐲉𐲖𐲉𐲙 <br />
+𐲮𐲉𐲯𐲉𐲤𐲇:‏𐲘𐲋𐲍:‏𐲉𐲎𐲥𐲉𐲢:‏𐲎𐲟𐲯𐲉𐲖𐲉𐲘𐲢𐲉:‏𐲙𐲋𐲠𐲉𐲇 <br />
+𐲆𐲀𐲂𐲀:‏𐲓𐲐𐲢𐲁𐲗𐲌𐲐:‏𐲆𐲐𐲖𐲖𐲀𐲍:‏𐲞𐲤𐲮𐲋𐲚𐲉𐲙 <br />
+<br />
+𐲘𐲀𐲢𐲛𐲓𐲚𐲐:‏𐲥𐲋𐲓𐲉𐲗:‏𐲠𐲛𐲢𐲖𐲐𐲓:‏𐲘𐲐𐲙𐲦:‏𐲀:‏𐲥𐲐𐲓𐲖𐲀 <br />
+𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲢𐲄𐲁𐲙𐲀𐲓:‏𐲯𐲀𐲒𐲖𐲜:‏𐲦𐲉𐲙𐲍𐲉𐲢𐲋𐲙 <br />
+𐲌𐲉𐲒𐲬𐲙𐲓:‏𐲀𐲯:‏𐲁𐲢:‏𐲒𐲀𐲒:‏𐲥𐲁𐲯𐲥𐲛𐲢:‏𐲉𐲖𐲂𐲛𐲢𐲑𐲦𐲒𐲀 <br />
+𐲙𐲉:‏𐲏𐲀𐲎𐲇:‏𐲉𐲖𐲮𐲉𐲥𐲙𐲐:‏𐲉𐲢𐲇𐲋𐲗𐲦:‏𐲐𐲤𐲦𐲉𐲙𐲬𐲙𐲓 <br />
+<br />
+𐲀𐲘𐲉𐲇𐲇𐲐𐲍:‏𐲋𐲖𐲬𐲙𐲓:‏𐲘𐲀𐲎𐲀𐲢:‏𐲀𐲒𐲓𐲫:‏𐲙𐲋𐲠𐲉𐲓 <br />
+𐲘𐲉𐲍𐲦𐲞𐲢𐲙𐲐:‏𐲖𐲉𐲖𐲓𐲬𐲙𐲓:‏𐲙𐲉𐲘:‏𐲖𐲉𐲏𐲉𐲦:‏𐲤𐲛𐲏𐲀 <br />
+𐲥𐲬𐲖𐲉𐲤𐲤𐲬𐲙𐲓:‏𐲂𐲁𐲢𐲏𐲛𐲖:‏𐲌𐲞𐲖𐲇𐲬𐲙𐲓:‏𐲂𐲁𐲢𐲘𐲉𐲗:‏𐲠𐲛𐲙𐲦𐲒𐲁𐲙 <br />
+𐲖𐲉𐲎𐲉𐲙:‏𐲀:‏𐲤𐲛𐲢𐲤𐲪𐲙𐲓:‏𐲒𐲜:‏𐲮𐲀𐲎:‏𐲘𐲛𐲤𐲦𐲛𐲏𐲀 <br />
+<br />
+𐲓𐲉𐲤𐲉𐲢𐲮𐲉𐲤:‏𐲘𐲫𐲖𐲦𐲪𐲙𐲓:‏𐲋𐲮𐲉𐲯𐲢𐲉𐲇𐲉𐲤:‏𐲂𐲀𐲖𐲤𐲛𐲢𐲤 <br />
+𐲦𐲀𐲦𐲁𐲢-𐲦𐲞𐲢𐲞𐲓:‏𐲇𐲫𐲖𐲦:‏𐲀:‏𐲖𐲀𐲂𐲀𐲙𐲄:‏𐲢𐲀𐲂𐲐𐲍𐲁𐲖𐲦 <br />
+𐲒𐲪𐲤𐲤𐲪𐲙𐲓:‏𐲉𐲖:‏𐲏𐲛𐲙𐲂𐲀𐲙:‏𐲥𐲋𐲓𐲉𐲗:‏𐲘𐲀𐲎𐲀𐲢:‏𐲌𐲞𐲖𐲇𐲞𐲙 <br />
+𐲥𐲀𐲂𐲀𐲇:‏𐲏𐲀𐲯𐲁𐲂𐲀𐲙:‏𐲋𐲖𐲒𐲬𐲙𐲓:‏𐲂𐲛𐲖𐲇𐲛𐲍𐲀𐲙 <br />
+<br />
+𐲋𐲇𐲉𐲤:‏𐲥𐲭𐲯𐲀𐲚𐲁𐲙𐲓:‏𐲓𐲞𐲚𐲞𐲢𐲞𐲍𐲮𐲉:‏𐲓𐲋𐲢𐲬𐲙𐲓 <br />
+𐲘𐲉𐲙𐲦𐲤𐲇:‏𐲘𐲉𐲍:‏𐲉:‏𐲙𐲋𐲠𐲉𐲦:‏𐲮𐲋𐲢𐲯𐲟:‏𐲙𐲉𐲘𐲯𐲉𐲦𐲉𐲦 <br />
+𐲒𐲪𐲤𐲤𐲪𐲙𐲓:‏𐲉𐲖:‏𐲏𐲛𐲙𐲂𐲀𐲙:‏𐲥𐲋𐲓𐲉𐲗:‏𐲘𐲀𐲎𐲀𐲢:‏𐲌𐲞𐲖𐲇𐲞𐲙 <br />
+𐲥𐲀𐲂𐲀𐲇:‏𐲏𐲀𐲯𐲁𐲂𐲀𐲙:‏𐲋𐲖𐲒𐲬𐲙𐲓:‏𐲂𐲛𐲖𐲇𐲛𐲍𐲀𐲙 <br />
+<br />
+𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲐𐲙𐲙𐲉𐲙:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦 <br />
+𐲛𐲢𐲥𐲁𐲍𐲏𐲀𐲦𐲁𐲢𐲛𐲙:‏𐲜𐲄𐲉𐲁𐲙𐲛𐲙:‏𐲁𐲦 <br />
+𐲒𐲞𐲒𐲒:‏𐲏𐲁𐲦:‏𐲓𐲐𐲢𐲁𐲗𐲪𐲙𐲓:‏𐲐𐲦𐲦:‏𐲮𐲁𐲢:‏𐲀:‏𐲦𐲉:‏𐲙𐲋𐲠𐲉𐲇 <br />
+𐲥𐲋𐲓𐲉𐲗:‏𐲙𐲉𐲘𐲯𐲉𐲦𐲉𐲇:‏𐲓𐲁𐲢𐲠𐲁𐲦-𐲂𐲋𐲢𐲄𐲉𐲓𐲉𐲙 <br />
+<br />
+𐲏𐲟𐲤:‏𐲥𐲀𐲂𐲀𐲇𐲤𐲁𐲍𐲁𐲦:‏𐲉𐲖𐲮𐲉𐲥𐲦𐲐:‏𐲤𐲉𐲍𐲉𐲤𐲮𐲁𐲢 <br />
+𐲘𐲁𐲇𐲋𐲌𐲀𐲖𐲮𐲁𐲢𐲀:‏𐲌𐲁𐲒𐲜𐲙:‏𐲓𐲉𐲖𐲖:‏𐲦𐲉𐲓𐲐𐲙𐲦𐲤 <br />
+𐲌𐲞𐲖𐲇𐲉𐲇:‏𐲇𐲫𐲤:‏𐲓𐲐𐲙𐲆𐲋𐲦:‏𐲙𐲋𐲠𐲉𐲓:‏𐲋𐲖𐲐𐲓:‏𐲤:‏𐲇𐲫𐲖𐲒𐲁𐲓 <br />
+𐲌𐲐𐲀𐲇𐲙𐲀𐲓:‏𐲤𐲛𐲓𐲥𐲛𐲢:‏𐲘𐲋𐲍:‏𐲓𐲉𐲚𐲉𐲢𐲉:‏𐲤𐲐𐲙𐲆 <br />
+<br />
+𐲘𐲁𐲢:‏𐲘𐲁𐲤𐲌𐲋𐲖𐲉𐲯𐲉𐲢:‏𐲋𐲮:‏𐲜𐲦𐲀:‏𐲆𐲀𐲂𐲀:‏𐲙𐲋𐲠𐲉 <br />
+𐲤𐲛𐲓:‏𐲮𐲐𐲏𐲀𐲢𐲦:‏𐲋𐲖𐲦:‏𐲁𐲦:‏𐲤𐲛𐲢𐲤𐲀:‏𐲘𐲛𐲤𐲦𐲛𐲏𐲀 <br />
+𐲓𐲬𐲖𐲤𐲟:‏𐲉𐲖𐲖𐲉𐲙𐲤𐲋𐲍:‏𐲒𐲀𐲒:‏𐲇𐲉:‏𐲎𐲀𐲓𐲢𐲀𐲙:‏𐲦𐲋𐲠𐲦𐲉 <br />
+𐲙𐲉𐲘:‏𐲋𐲢𐲦𐲉𐲦𐲦:‏𐲉𐲎𐲉𐲦:‏𐲛𐲦𐲦𐲏𐲛𐲙:‏𐲤𐲉𐲘:‏𐲤𐲛𐲏𐲀 <br />
+<br />
+𐲘𐲀𐲢𐲛𐲓𐲚𐲐:‏𐲥𐲋𐲓𐲉𐲗:‏𐲠𐲛𐲢𐲖𐲐𐲓:‏𐲘𐲐𐲙𐲦:‏𐲀:‏𐲥𐲐𐲓𐲖𐲀 <br />
+𐲙𐲋𐲠𐲉𐲓:‏𐲏𐲀𐲢𐲄𐲁𐲙𐲀𐲓:‏𐲯𐲀𐲒𐲖𐲜:‏𐲦𐲉𐲙𐲍𐲉𐲢𐲋𐲙 <br />
+𐲌𐲉𐲒𐲬𐲙𐲓:‏𐲀𐲯:‏𐲁𐲢:‏𐲒𐲀𐲒:‏𐲥𐲁𐲯𐲥𐲛𐲢:‏𐲉𐲖𐲂𐲛𐲢𐲑𐲦𐲒𐲀 <br />
+𐲙𐲉:‏𐲏𐲀𐲎𐲇:‏𐲉𐲖𐲮𐲉𐲥𐲙𐲐:‏𐲉𐲢𐲇𐲋𐲗𐲦:‏𐲐𐲤𐲦𐲉𐲙𐲬𐲙𐲓 <br />
 </p>
                         </div>
                 </div>
