--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                 <div id="content-container" style="flex-grow: 1;">
                     <div class="wrapper">
                         <h1 style=text-align:center>Rovás Irás</h1>
-                            <h2 style=text-align:right>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
+                            <h2 style=text-align:right;font-family:OldHungarian>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
                             <p style="text-align:right;font-family:OldHungarian;font-size:20px">                            
 𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎 <br />
@@ -263,7 +263,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲁𐲘𐲉𐲙
 </p>
 
-                            <h2 style=text-align:right>𐲥𐲜𐲯𐲀𐲦</h2>
+                            <h2 style=text-align:right;font-family:OldHungarian>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
                             <p style="text-align:right;font-family:OldHungarian;font-size:20px">
 𐲏𐲀𐲯𐲁𐲇𐲙𐲀𐲓:‏𐲢𐲉𐲙𐲇𐲬𐲖𐲉𐲦𐲖𐲉𐲙𐲭𐲖 <br />
@@ -337,7 +337,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲐𐲦𐲦:‏𐲋𐲖𐲙𐲉𐲇:‏𐲏𐲀𐲖𐲙𐲛𐲇:‏𐲓𐲉𐲖𐲖 <br />
 </p>
                             
-                           <h2 style=text-align:right>𐲏𐲐𐲘𐲙𐲪𐲥</h2>
+                           <h2 style=text-align:right;font-family:OldHungarian>𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Himnusz)</h3>
                             <p style="text-align:right;font-family:OldHungarian;font-size:20px">
 𐳺 <br />
@@ -420,7 +420,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 𐲘𐲉𐲍𐲂𐲭𐲙𐲏𐲟𐲇𐲦𐲉:‏𐲘𐲁𐲢:‏𐲉:‏𐲙𐲋𐲠 <br />
 𐲀:‏𐲘𐲫𐲖𐲦𐲀𐲦:‏𐲤:‏𐲒𐲞𐲮𐲉𐲙𐲇𐲟𐲦 <br />
 </p>
-                            <h2 style=text-align:right>𐲥𐲋𐲓𐲉𐲗 𐲏𐲐𐲘𐲙𐲪𐲥</h2>
+                            <h2 style=text-align:right;font-family:OldHungarian>𐲥𐲋𐲓𐲉𐲗 𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Székely Himnusz)</h3>
                             <p style="text-align:right;font-family:OldHungarian;font-size:20px">
 𐲓𐲐:‏𐲦𐲪𐲇𐲒𐲀:‏𐲘𐲉𐲢𐲢𐲉:‏𐲘𐲉𐲢𐲢𐲉:‏𐲮𐲐𐲥:‏𐲀:‏𐲮𐲋𐲍𐲯𐲉𐲦 <br />
