--- a/index.html
+++ b/index.html
@@ -247,19 +247,19 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                             <h2 style=text-align:right;font-family:OldHungarian>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
                             <p style="text-align:right;font-family:OldHungarian;font-size:20px">                            
-𐲘𐲐:‏𐲀𐲨𐲁𐲙𐲓:‏𐲀𐲓𐲐:‏𐲀:‏𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙:‏𐲮𐲀𐲎 <br />
-𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲙𐲉𐲮𐲉𐲇 <br />
-𐲒𐲞𐲒𐲒𐲞𐲙:‏𐲉𐲖:‏𐲀:‏𐲦𐲉:‏𐲛𐲢𐲥𐲁𐲍𐲛𐲇 <br />
-𐲖𐲉𐲎𐲉𐲙:‏𐲘𐲉𐲍:‏𐲀:‏𐲦𐲉:‏𐲀𐲓𐲀𐲢𐲀𐲦𐲛𐲇 <br />
-𐲀𐲘𐲐𐲙𐲦:‏𐲀:‏𐲘𐲉𐲙𐲚𐲂𐲉𐲙:‏𐲫𐲎:‏𐲀:‏𐲌𐲞𐲖𐲇𐲞𐲙:‏𐲐𐲤 <br />
-𐲘𐲐𐲙𐲇𐲉𐲙𐲙𐲀𐲠𐲐:‏𐲓𐲉𐲚𐲉𐲢𐲬𐲙𐲓𐲉𐲦:‏𐲀𐲇𐲇:‏𐲘𐲉𐲍:‏𐲙𐲉𐲓𐲬𐲙𐲓:‏𐲘𐲀 <br />
-𐲋𐲤:‏𐲂𐲛𐲆𐲁𐲤𐲇:‏𐲘𐲉𐲍:‏𐲮𐲋𐲦𐲓𐲉𐲐𐲙𐲓𐲉𐲦 <br />
-𐲘𐲐𐲓𐲋𐲠𐲠𐲉𐲙:‏𐲘𐲐:‏𐲐𐲤:‏𐲘𐲉𐲍𐲂𐲛𐲆𐲁𐲦𐲪𐲙𐲓 <br />
-𐲀𐲯:‏𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓:‏𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓 <br />
-𐲋𐲤:‏𐲙𐲉:‏𐲮𐲑𐲎:‏𐲘𐲐𐲙𐲓𐲉𐲦:‏𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉 <br />
-𐲇𐲉:‏𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤:‏𐲘𐲉𐲍:‏𐲀:‏𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖 <br />
-𐲘𐲉𐲢𐲦:‏𐲦𐲐𐲋𐲇:‏𐲀𐲯:‏𐲛𐲢𐲥𐲁𐲍:‏𐲀:‏𐲏𐲀𐲦𐲀𐲖𐲛𐲘:‏𐲋𐲤:‏𐲀:‏𐲇𐲐𐲆𐲟𐲤𐲋𐲍:
-				    ‏𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋 <br />
+𐲘𐲐 𐲀𐲨𐲁𐲙𐲓⹁‏ 𐲀𐲓𐲐 𐲀 𐲘𐲉𐲙𐲚𐲉𐲓𐲂𐲉𐲙 𐲮𐲀𐲎⹁‏ <br />
+𐲥𐲉𐲙𐲦𐲉𐲖𐲦𐲉𐲤𐲤𐲋𐲓 𐲘𐲉𐲍 𐲀 𐲦𐲉 𐲙𐲉𐲮𐲉𐲇⁏‏<br />
+𐲒𐲞𐲒𐲒𐲞𐲙 𐲉𐲖 𐲀 𐲦𐲉 𐲛𐲢𐲥𐲁𐲍𐲛𐲇⁏‏<br />
+𐲖𐲉𐲎𐲉𐲙 𐲘𐲉𐲍 𐲀 𐲦𐲉 𐲀𐲓𐲀𐲢𐲀𐲦𐲛𐲇⹁‏<br />
+𐲀𐲘𐲐𐲙𐲦 𐲀 𐲘𐲉𐲙𐲚𐲂𐲉𐲙⹁‏ 𐲫𐲎 𐲀 𐲌𐲞𐲖𐲇𐲞𐲙 𐲐𐲤.‏<br />
+𐲘𐲐𐲙𐲇𐲉𐲙𐲙𐲀𐲠𐲐 𐲓𐲉𐲚𐲉𐲢𐲬𐲙𐲓𐲉𐲦 𐲀𐲇𐲇 𐲘𐲉𐲍 𐲙𐲉𐲓𐲬𐲙𐲓 𐲘𐲀⁏‏<br />
+𐲋𐲤 𐲂𐲛𐲆𐲁𐲤𐲇 𐲘𐲉𐲍 𐲮𐲋𐲦𐲓𐲉𐲐𐲙𐲓𐲉𐲦⹁‏<br />
+𐲘𐲐𐲓𐲋𐲠𐲠𐲉𐲙 𐲘𐲐 𐲐𐲤 𐲘𐲉𐲍𐲂𐲛𐲆𐲁𐲦𐲪𐲙𐲓<br />
+𐲀𐲯 𐲉𐲖𐲖𐲉𐲙𐲬𐲙𐲓 𐲮𐲋𐲦𐲓𐲉𐲯𐲟𐲓𐲙𐲉𐲓⁏‏<br />
+𐲋𐲤 𐲙𐲉 𐲮𐲑𐲎 𐲘𐲐𐲙𐲓𐲉𐲦 𐲓𐲑𐲤𐲋𐲢𐲦𐲋𐲤𐲂𐲉⹁‏<br />
+𐲇𐲉 𐲥𐲀𐲂𐲀𐲇𐲑𐲦𐲤 𐲘𐲉𐲍 𐲀 𐲍𐲛𐲙𐲛𐲥𐲦𐲜𐲖!‏<br />
+𐲘𐲉𐲢𐲦 𐲦𐲐𐲋𐲇 𐲀𐲯 𐲛𐲢𐲥𐲁𐲍⹁‏ 𐲀 𐲏𐲀𐲦𐲀𐲖𐲛𐲘 𐲋𐲤 𐲀 𐲇𐲐𐲆𐲟𐲤𐲋𐲍<br />
+𐲘𐲐𐲙𐲇𐲞𐲢𐲞𐲓𐲓𐲋.‏ 𐲁𐲘𐲉𐲙.‏ <br />
 𐲁𐲘𐲉𐲙
 </p>
 
