Fixed word spacing and font size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 
                 /* applies to all areas */
                 --font-family: sans-serif;
-                --font-size: 25px;
+                --font-size: 20px;
                 --line-height: 1.3em;
                 --font-color: black;
                 --link-color: #363636;
@@ -246,7 +246,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                         <h1 style=text-align:center>Rovás Irás</h1>
                             <h2 style=text-align:right;font-family:OldHungarian>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">                            
+                            <p style="text-align:right;font-family:OldHungarian;font-size:30px;word-spacing: 6px">                            
 𐲘𐳐 𐲀𐳨𐳁𐳙𐳓⹁‏ 𐳀𐳓𐳐 𐳀 𐳘𐳉𐳙𐳚𐳉𐳓𐳂𐳉𐳙 𐳮𐳀𐳎⹁‏<br />
 𐳥𐳉𐳙𐳦𐳉𐳖𐳦𐳉𐳤𐳤𐳋𐳓 𐳘𐳉𐳍 𐳀 𐳦𐳉 𐳙𐳉𐳮𐳉𐳇⁏‏<br />
 𐳒𐳞𐳒𐳒𐳞𐳙 𐳉𐳖 𐳀 𐳦𐳉 𐳛𐳢𐳥𐳁𐳍𐳛𐳇⁏‏<br />
@@ -264,7 +264,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 			    
                            <h2 style=text-align:right;font-family:OldHungarian>𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Himnusz)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:30px;word-spacing: 6px">
 𐲐𐳤𐳦𐳉𐳙⹁‏ 𐳁𐳖𐳇𐳇 𐳘𐳉𐳍 𐳀 𐳘𐳀𐳎𐳀𐳢𐳦<br />
 𐲒𐳜 𐳓𐳉𐳇𐳮𐳮𐳉𐳖⹁‏ 𐳂𐳟𐳤𐳋𐳍𐳍𐳉𐳖⹁‏<br />
 𐲚𐳫𐳒𐳦𐳤 𐳌𐳉𐳖𐳋𐳒𐳉 𐳮𐳋𐳇𐳟 𐳓𐳀𐳢𐳦⹁‏<br />
@@ -340,7 +340,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 
                             <h2 style=text-align:right;font-family:OldHungarian>𐲥𐲜𐲯𐲀𐲦</h2>
                             <h3 style=text-align:right>(Szózat)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:30px;word-spacing: 6px">
 𐲏𐳀𐳯𐳁𐳇𐳙𐳀𐳓 𐳢𐳉𐳙𐳇𐳬𐳖𐳉𐳦𐳖𐳉𐳙𐳭𐳖<br />
 𐲖𐳋𐳎 𐳏𐳑𐳮𐳉⹁‏ 𐳛𐳏 𐳘𐳀𐳎𐳀𐳢⁏‏<br />
 𐲂𐳞𐳖𐳆𐳟𐳇 𐳀𐳯 𐳤 𐳘𐳀𐳒𐳇𐳀𐳙 𐳤𐳑𐳢𐳛𐳇 𐳐𐳤⹁‏<br />
@@ -415,7 +415,7 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
 
                             <h2 style=text-align:right;font-family:OldHungarian>𐲥𐲋𐲓𐲉𐲗 𐲏𐲐𐲘𐲙𐲪𐲥</h2>
                             <h3 style=text-align:right>(Székely Himnusz)</h3>
-                            <p style="text-align:right;font-family:OldHungarian;font-size:20px">
+                            <p style="text-align:right;font-family:OldHungarian;font-size:30px;word-spacing: 6px">
 𐲓𐳐 𐳦𐳪𐳇𐳒𐳀 𐳘𐳉𐳢𐳢𐳉⹁‏ 𐳘𐳉𐳢𐳢𐳉 𐳮𐳐𐳥 𐳀 𐳮𐳋𐳍𐳯𐳉𐳦<br />
 𐲍𐳞𐳢𐳞𐳙𐳎𐳞𐳤 𐳫𐳦𐳛𐳙⹁‏ 𐳤𐳞𐳦𐳋𐳦 𐳋𐳒𐳒𐳉𐳖𐳉𐳙.‏<br />
 𐲮𐳉𐳯𐳉𐳤𐳇 𐳘𐳋𐳍 𐳉𐳎𐳥𐳉𐳢 𐳎𐳟𐳯𐳉𐳖𐳉𐳘𐳢𐳉 𐳙𐳋𐳠𐳉𐳇⹁‏<br />
