Added Alphabet of the runes

--- a/index.html
+++ b/index.html
@@ -244,6 +244,138 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                 <div id="content-container" style="flex-grow: 1;">
                     <div class="wrapper">
                         <h1 style=text-align:center>Rovás Irás</h1>
+<h2 style="text-align:center">Ábécé <br> 𐲁𐳂𐳋𐳄𐳋 </h2>
+
+<table style="width:80%;text-align:center">
+  <tr>
+    <th>𐲎</th>
+    <th>𐲍</th>
+    <th>𐲌</th>
+    <th>𐲋</th>
+    <th>𐲉</th>
+    <th>𐲇</th>
+    <th>𐲆</th>
+    <th>𐲄</th>
+    <th>𐲂</th>
+    <th>𐲁</th>
+    <th>𐲀</th>
+  </tr>
+  
+  <tr>
+    <td>Gy</td>
+    <td>G</td>
+    <td>F</td>
+    <td>É</td>
+    <td>E</td>
+    <td>D</td>
+    <td>Cs</td>
+    <td>C</td>
+    <td>B</td>
+    <td>Á</td>
+    <td>A</td>
+  </tr>
+  <tr>
+    <th>𐲛</th>
+    <th>𐲚</th>
+    <th>𐲙</th>
+    <th>𐲘</th>
+    <th>𐲗</th>
+    <th>𐲖</th>
+    <th>𐲓, 𐲔</th>
+    <th>𐲒</th>
+    <th>𐲑</th>
+    <th>𐲐</th>
+    <th>𐲏</th>
+  </tr>
+  
+  <tr>
+    <td>O</td>
+  	<td>Ny</td>
+    <td>N</td>
+    <td>M</td>
+    <td>Ly</td>
+    <td>L</td>
+    <td>K</td>
+    <td>J</td>
+    <td>Í</td>
+    <td>I</td>
+    <td>H</td>
+  </tr>
+   
+  <tr>
+    <th>𐲫</th>
+    <th>𐲪</th>
+    <th>𐲨</th>
+    <th>𐲦</th>
+    <th>𐲥</th>
+    <th>𐲤</th>
+    <th>𐲢</th>
+    <th>𐲠</th>
+    <th>𐲟</th>
+    <th>𐲞</th>
+    <th>𐲜</th>
+  </tr>
+   
+  <tr>
+    <td>Ú</td>
+  	<td>U</td>
+    <td>Ty</td>
+    <td>T</td>
+    <td>Sz</td>
+    <td>S</td>
+    <td>R</td>
+    <td>P</td>
+    <td>Ő</td>
+    <td>Ö</td>
+    <td>Ó</td>
+  </tr>
+   
+  <tr>
+    <th>𐲰</th>
+    <th>𐲯</th>
+    <th>𐲮</th>
+    <th>𐲬</th>
+    <th>𐲭</th>
+  </tr>
+   
+  <tr>
+    <td>Zs</td>
+    <td>Z</td>
+    <td>V</td>
+    <td>Ű</td>
+    <td>Ü</td>
+  </tr>
+   
+</table>
+
+<p>Jegyzetek: Nincsen Dz, Dzs, Q, W, X, Y. Ezek a betűk csak később lett a magyar ábécébe. Mai korabeli emberek csináltak a betűk erre de ez nem a volt eredeti rovás irás.<br> <br>
+
+Notes: There is no Dz, Dzs, Q, W, X, Y. These letters were only implemented later in the Hungarian alphabet. There were contemporary ligatures made for these letters but this was not the original Hungarian Runic writing.
+</p>
+
+<table style="width:80%;text-align:center">
+
+ <tr>
+    <th>(𐲒‍𐲐)</th>
+    <th>(𐲓‍𐲥)</th>
+    <th>(𐲓‍𐲮)</th>
+    <th>(𐲓‍𐲮)</th>
+    <th>(𐲇‍𐲰),</th>
+    <th>(𐲇‍𐲯),</th>
+  </tr>
+  
+  <tr>
+    <td>Y</td>
+    <td>X</td>
+    <td>W</td>
+    <td>Q</td>
+    <td>Dzs</td>
+    <td>Dz</td>
+  </tr>
+
+</table>    
+
+			    
                             <h2 style=text-align:right;font-family:OldHungarian>𐲘𐲐 𐲀𐲨𐲁𐲙𐲓</h2>
                             <h3 style=text-align:right>(Mi Atyánk)</h3>
                             <p style="text-align:right;font-family:OldHungarian;font-size:30px;word-spacing: 6px">                            
