Updated side bars

--- a/index.html
+++ b/index.html
@@ -237,9 +237,8 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
                     <div class="sidebar-wrapper">Old Hungarian script (Rovás Irás) was the Hungarian script used primarily before the year 1000,
                         before the christianisation of Hungary. Due to Hungary converting to Roman Catholicism, it lead to the language being Latinised
                         and the removal of the old 'pagan' writing system. Old Hungarian is read right to left, likely due to people carving into wood/stone
-                        and this being easier and safer right to left as opposed to most languages being left to right. This page has converted popular 
-                        Hungarian scripts and texts to Old Hungarian. I believe that we as Hungarians should start reembracing Old Hungarian, learn
-                        to read and write in the script, as it is completely our own writing system that our ancestors formed.</div>
+                        and this being easier and safer right to left as opposed to most languages being left to right. This page's purpose is to teach Hungarian
+			runic writing to everyone, so that we Hungarians can use it once again, because our ancestors created this script, thus we must respect our past.</div>
                 </div>
                 <div id="content-container" style="flex-grow: 1;">
                     <div class="wrapper">
@@ -563,10 +562,10 @@ Notes: There is no Dz, Dzs, Q, W, X, Y. These letters were only implemented late
                         </div>
                 </div>
                 <div id="right-sidebar" style="display: block;">
-                    <div class="sidebar-wrapper">Rovás Irás volt a regi magyar irás rendszer ezer ellőt. A romai katalikus egyház befojása behozott a latin ábécé,
-                            és azért kiment a Rovás Irás hasznalata. Rovás Irás jobbról balról van le irva, vallószinúleg mert akkor minden fába és kőbe volt
-                            le irva, és konyebb és biztonságossab mint balról jobbról irás. Ez a honlap lényege hogy mi Magyarok kezdjunk használni megint
-                            a Rovás Irást, mert a mi őseink kitalátak ezt az irást, senki más.
+                    <div class="sidebar-wrapper">Rovás Irás volt a regi magyar irás rendszer ezer ellőt, ellőtte hogy Magyarország lett kerestény. A Romai Katolikus egyház befojásatol allat lett a nyelv latinazát
+                            és a régi 'pagány' irás rendszer kivonva. Rovás Irás jobbról balról van le olvasva, vallószinúleg mert akkor minden fába és kőbe volt
+                            le irva, ezért konyebb és biztonságossab mint a balról jobbról irás. Ez a honlap arrol foglalkozik hogy tanítson a Magyar rovás irást mindenkinek, hogy mi Magyarok kezdjunk használni megint
+                            ezt az irást rendszer, mert a mi őseink kitalátak ezt az irást, ezért meg kell tiszteljük a mi múltunk.
                     </div>
                 </div>
             </div>
