--- a/rovas.html
+++ b/rovas.html
@@ -3,7 +3,7 @@
 </header>
 
 <head>
-        <title>Rovás Irás | Old Hungarian</title>
+        <title>Rovás Írás | Old Hungarian</title>
 		<link rel="stylesheet" href="css/oldhungarian/oldhungarian.css"/>
         <meta charset="UTF-8">
         <meta name="description" content="Old Hungarian script (Rovás Irás) was the Hungarian script used primarily before the year 1000, 
@@ -212,26 +212,11 @@ to the language being Latinised and the removal of the old 'pagan' writing syste
         <div id="header-full" style="display: block;"></div>
         <div id="navbar-full" style="display: block;">
             <ul class="nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="index.html">Main</a></li>
+                <li><a href="rovas.html">Home</a></li>
+                <li><a href="rovas-about.html">About</a></li>
             </ul>
         </div>
-        <div id="main-container">
-            <div id="header-contained" style="display: none;"></div>
-            <div id="navbar-contained" style="display: none;">
-                <ul class="nav">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </div>
             <div class="content-wrap flex alignment">
                 <div id="left-sidebar" style="display: block;">
                     <div class="sidebar-wrapper">Old Hungarian script (Rovás Irás) was the Hungarian script used primarily before the year 1000,
